@@ -25,7 +25,7 @@ export("?", CRAN.packages, Rprof,Rprofmem, RShowDoc, RSiteSearch,
        recover, relist, remove.packages, savehistory, select.list,
        sessionInfo, setBreakpoint, setRepositories, stack, str,
        strOptions, summaryRprof, tail, tail.matrix, timestamp,
-       toBibtex, toLatex, type.convert, unstack, unzip,
+       toBibtex, toLatex, type.convert, unstack, untar, unzip,
        update.packageStatus, update.packages, upgrade, url.show, vi,
        vignette, write.csv, write.csv2, write.socket, write.table,
        wsbrowser, xedit, xemacs, zip.file.extract, rtags, aspell,
